# Interpreter

./: .gitignore  CMakeLists.txt
include/Execution/: Instructions.h  Interpreter.h  Stack.h  Value.h
include/vm/: Instructions.h  Interpreter.h  Stack.h
src/: CMakeLists.txt  anvil.cpp
src/Execution/: Interpreter.cpp  Stack.cpp  Value.cpp
src/vm/: Interpreter.cpp  Stack.cpp
tests/: CMakeLists.txt  interpreter.cpp  stack.cpp  test.cpp  test.h
